# CPPReflection

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.h
BuildTool/: CMakeLists.txt  README.md
BuildTool/meta_parser/: CMakeLists.txt
BuildTool/meta_parser/parser/: main.cpp
BuildTool/meta_parser/parser/common/: FileTimestamp.cpp  FileTimestamp.h  MetaDB.cpp  MetaDB.h
BuildTool/meta_parser/parser/cursor/: cursor.cpp
BuildTool/meta_parser/parser/generator/: generator.cpp  generator.h  reflection_generator.cpp  reflection_generator.h  serializer_generator.cpp  serializer_generator.h
BuildTool/meta_parser/parser/language_types/: class.cpp  class.h  class_tag.h  field.cpp  type_info.cpp
BuildTool/meta_parser/parser/meta/: meta_data_config.h  meta_utils.cpp
BuildTool/meta_parser/parser/parser/: parser.cpp  parser.h
BuildTool/meta_parser/parser/template_manager/: template_manager.cpp
BuildTool/meta_parser/template/: allReflectionFile.mustache  commonReflectionFile.mustache
BuildTool/precompile/: precompile.cmake
Example/: CMakeLists.txt  main.cpp
Example/Reflection/: ObjectInitiliazer.h  meta_example.cpp  meta_example.h
Example/Reflection/reflection/: reflection.cpp  reflection.h  reflection_register.cpp
Example/Reflection/serializer/: serializer.h
TestFiles/: CMakeLists.txt  test.h
TestFiles/Reflection/: meta_example.cpp  meta_example.h
TestFiles/Reflection/reflection/: reflection.cpp  reflection.h
TestFiles/Reflection/serializer/: serializer.h
